--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "_gitAddAll": "git add .",
+    "_gitCommit": "git commit -m 'Какие то изменения'",
+    "_npmRunDeploy": "npm run deploy",
+    "_push": "git push -u origin master"
+
   },
   "eslintConfig": {
     "extends": "react-app"
